# onboarding

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  cli.py  config.yml  constants.py  docker-compose.yml  formatters.py  pyproject.toml  services.py
.circleci/: config.yml
services/: checker.py  formatters.py  renderer.py
services/tests/: test_checker.py  test_formatters.py  test_renderer.py
