[tool.poetry]
name = "onboarding"
version = "0.1.0"
description = "Onboarding script for the people in your organization"
authors = ["Javier Aguirre"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.3"
pyyaml = "^5.3.1"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
